grid-view: Replace a11y hack with listitem accessible-label

This accomplishes our original goal of setting the a11y property on
the GtkListItemWidget

Fixes one part of https://gitlab.gnome.org/GNOME/nautilus/-/issues/3253