src/nautilus-grid-view.c
@@ -471,10 +471,6 @@ bind_cell (GtkSignalListItemFactory *factory,
         parent = gtk_widget_get_parent (cell);
         gtk_widget_set_halign (parent, GTK_ALIGN_CENTER);
         gtk_widget_set_valign (parent, GTK_ALIGN_START);
-
-        gtk_accessible_update_relation (GTK_ACCESSIBLE (parent),
-                                        GTK_ACCESSIBLE_RELATION_LABELLED_BY, cell, NULL,
-                                        -1);
     }
 }
 
@@ -501,6 +497,7 @@ setup_cell (GtkSignalListItemFactory *factory,
 {
     NautilusGridView *self = NAUTILUS_GRID_VIEW (user_data);
     NautilusGridCell *cell;
+    GtkExpression *expression;
 
     cell = nautilus_grid_cell_new (NAUTILUS_LIST_BASE (self));
     gtk_list_item_set_child (listitem, GTK_WIDGET (cell));
@@ -512,6 +509,14 @@ setup_cell (GtkSignalListItemFactory *factory,
                             G_BINDING_SYNC_CREATE);
 
     nautilus_grid_cell_set_caption_attributes (cell, self->caption_attributes);
+
+    /* Use file display name as accessible label. Explaining in pseudo-code:
+     * listitem:accessible-name :- listitem:item:item:file:display-name */
+    expression = gtk_property_expression_new (GTK_TYPE_LIST_ITEM, NULL, "item");
+    expression = gtk_property_expression_new (GTK_TYPE_TREE_LIST_ROW, expression, "item");
+    expression = gtk_property_expression_new (NAUTILUS_TYPE_VIEW_ITEM, expression, "file");
+    expression = gtk_property_expression_new (NAUTILUS_TYPE_FILE, expression, "display-name");
+    gtk_expression_bind (expression, listitem, "accessible-label", listitem);
 }
 
 static GtkGridView *
